# specere

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-review.yml  release-guards.yml
.specere/: manifest.toml  review-queue.md  sensor-map.toml
.specify/: extensions.yml  feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
.specify/workflows/specere-observe/: workflow.yml
crates/specere/: Cargo.toml
crates/specere-core/: Cargo.toml
crates/specere-core/src/: lib.rs
crates/specere-filter/: Cargo.toml
crates/specere-filter/src/: bp.rs  calibrate.rs  coupling.rs  drive.rs  hmm.rs  lib.rs  motion.rs  motion_fit.rs  posterior.rs  rbpf.rs  rbpf_config.rs  specs.rs  state.rs
crates/specere-filter/tests/: factor_graph_bp.rs  gate_a_parity.rs  perspec_hmm_hand_computed.rs  rbpf_gate_a.rs
crates/specere-filter/tests/fixtures/gate_a/: posterior.toml
crates/specere-manifest/: Cargo.toml
crates/specere-manifest/src/: lib.rs
crates/specere-markers/: Cargo.toml
crates/specere-markers/src/: lib.rs  text_block_fence.rs  yaml_block_fence.rs
crates/specere-telemetry/: Cargo.toml
crates/specere-telemetry/src/: event_store.rs  grpc.rs  lib.rs  serve.rs  sqlite_backend.rs
crates/specere-units/: Cargo.toml
crates/specere-units/src/: ears_lint.rs  ears_linter.rs  filter_state.rs  lib.rs  orphan.rs  otel_collector.rs  speckit.rs
crates/specere-units/src/deploy/: claude_code.rs  mod.rs
crates/specere-units/src/deploy/agents/: specere-reviewer.md
crates/specere-units/src/deploy/rules/: specere-rules.md
crates/specere-units/src/deploy/skills/: specere-adopt.md  specere-observe-implement.md  specere-observe-step.md  specere-review-check.md  specere-review-drain.md
crates/specere-units/src/ears_linter/: lint-ears-skill.md  rules.toml
crates/specere-units/tests/: fr_p1_003_sha_diff_gate.rs  fr_p1_004_gitignore_marker.rs
crates/specere/src/: bug_tracker.rs  evaluate.rs  main.rs  smells.rs
crates/specere/src/adversary/: minimize.rs  mod.rs  provider.rs  sandbox.rs  spend.rs
crates/specere/src/harness/: classify.rs  cluster.rs  coverage.rs  dep_info.rs  flaky.rs  history.rs  mod.rs  node.rs  provenance.rs  scan.rs  tui.rs
crates/specere/tests/: fr_eq_001_evaluate_mutations.rs  fr_eq_003_lint_tests.rs  fr_eq_004_motion_from_evidence.rs  fr_eq_005_filter_calibration.rs  fr_eq_006_doctor_suspicious.rs  fr_eq_010_watch_issues.rs  fr_eq_020_adversary_run.rs  fr_hm_001_harness_scan.rs  fr_hm_010_harness_provenance.rs  fr_hm_020_harness_history.rs  fr_hm_030_harness_coverage.rs  fr_hm_040_harness_flaky.rs  fr_hm_050_harness_cluster.rs  fr_hm_052b_cluster_belief_wiring.rs  fr_hm_060_semconv_contract.rs  fr_hm_070_harness_tui.rs  fr_p1_001_no_no_git.rs  fr_p1_002_branch_auto_create.rs  fr_p1_005_hook_registration.rs  fr_p1_006_remove_round_trip.rs  fr_p1_007_manifest_branch_record.rs  fr_p1_008_malformed_file_refuse.rs  fr_p2_001_filter_state.rs  fr_p2_002_otel_collector.rs  fr_p2_003_ears_linter.rs  fr_p2_005_init.rs  fr_p2_orphan_detector.rs  fr_p3_001_event_store.rs  fr_p3_002_sqlite_backend.rs  fr_p3_003_serve_http.rs  fr_p3_004_workflow_spans.rs  fr_p3_005_serve_grpc.rs  fr_p4_005_throughput.rs  fr_p4_filter_cli.rs  fr_p4_filter_status_column_width.rs  fr_p4_rbpf_cli_routing.rs  fr_p5_calibrate_from_git.rs  fr_p6_persistence.rs  issue_007_agent_install.rs  issue_008_rules_block.rs  (+2 more)
crates/specere/tests/common/: mod.rs
docs/: README.md  auto-review.md  contributing-via-issues.md  evidence-quality-plan.md  filter.md  harness-manager-plan.md  otel-specere-semconv.md  phase3-execution-plan.md  phase4-execution-plan.md  phase4-followups-execution-plan.md  phase4-manual-test-report.md  phase5-calibrate-audit.md  phase5-dogfood-report.md  phase7-memaso-dogfood.md  release.md  specere_v1.md  upcoming.md
docs/history/: phase2-execution-plan.md
docs/lessons/: 0.2.0-usability.md
docs/proposals/: v2-evidence-quality.md  v3-harness-manager.md
docs/research/: 08_speckit_deepdive.md  09_speckit_capabilities.md
docs/roadmap/: 30_long_term_tool.md  31_specere_scaffolding.md
docs/test-plans/: agentic-integration-plan.md  self-dogfood-guide.md
scripts/: export_gate_a_posterior.py
specs/002-phase-1-bugfix-0-2-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-phase-1-bugfix-0-2-0/checklists/: requirements.md
specs/002-phase-1-bugfix-0-2-0/contracts/: cli.md  extensions-mutation.md  manifest.md
specs/005-release-infra/: plan.md  spec.md  tasks.md
