[workspace]
resolver = "2"
members = [
    "crates/specere",
    "crates/specere-core",
    "crates/specere-units",
    "crates/specere-manifest",
    "crates/specere-markers",
    "crates/specere-telemetry",
    "crates/specere-filter",
]

[workspace.package]
version = "1.0.4"
edition = "2021"
rust-version = "1.78"
authors = ["laiadlotape"]
license = "Apache-2.0"
repository = "https://github.com/laiadlotape/specere"
homepage = "https://github.com/laiadlotape/specere"
readme = "README.md"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sha2 = "0.10"
hex = "0.4"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
walkdir = "2"
tempfile = "3"
serde_yaml = "0.9"
serde_json = "1"
assert_cmd = "2"
predicates = "3"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "net"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tonic = { version = "0.14", features = ["transport"] }
opentelemetry-proto = { version = "0.31", features = ["gen-tonic", "trace", "logs"] }
prost = "0.14"
tokio-stream = { version = "0.1", features = ["net"] }
ndarray = "0.16"
rand = "0.8"
fs2 = "0.4"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"

specere-core = { path = "crates/specere-core", version = "1.0.4" }
specere-units = { path = "crates/specere-units", version = "1.0.4" }
specere-manifest = { path = "crates/specere-manifest", version = "1.0.4" }
specere-markers = { path = "crates/specere-markers", version = "1.0.4" }
specere-telemetry = { path = "crates/specere-telemetry", version = "1.0.4" }
specere-filter = { path = "crates/specere-filter", version = "1.0.4" }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
