[package]
name = "specere-core"
description = "SpecERE core types: AddUnit trait, Ctx, Plan, Record"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
time.workspace = true
