[package]
name = "specere-manifest"
description = "SpecERE manifest: .specere/manifest.toml load/save, SHA256 helpers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
toml.workspace = true
sha2.workspace = true
hex.workspace = true
thiserror.workspace = true
time.workspace = true
specere-core.workspace = true
