[package]
name = "specere-markers"
description = "SpecERE marker-fenced shared-file editing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde_yaml.workspace = true
