[package]
name = "specere-telemetry"
description = "SpecERE telemetry: embedded OTel receiver + observe entrypoint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
time.workspace = true
specere-core.workspace = true

[dev-dependencies]
tempfile.workspace = true
