[package]
name = "specere"
description = "Spec Entropy Regulation Engine — composable Repo-SLAM scaffolding with first-class uninstall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"

[[bin]]
name = "specere"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
specere-core.workspace = true
specere-manifest.workspace = true
specere-markers.workspace = true
specere-units.workspace = true
specere-telemetry.workspace = true
specere-filter.workspace = true
serde.workspace = true
serde_json.workspace = true
fs2.workspace = true

[dev-dependencies]
# Integration tests in tests/fr_p1_*.rs drive the `specere` binary via
# assert_cmd; `CARGO_BIN_EXE_specere` is only set for this crate's own
# integration tests, so the tests live here (not in specere-units).
tempfile.workspace = true
assert_cmd.workspace = true
predicates.workspace = true
hex.workspace = true
sha2.workspace = true
toml.workspace = true
serde_json.workspace = true
specere-telemetry.workspace = true
specere-filter.workspace = true
reqwest.workspace = true
tonic.workspace = true
opentelemetry-proto.workspace = true
